[gd_scene load_steps=7 format=2]

[ext_resource path="res://Action RPG Resources/System/ScoreUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Action RPG Resources/UI/PlayerHealthUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Action RPG Resources/System/SystemUI.gd" type="Script" id=3]
[ext_resource path="res://Action RPG Resources/UI/EnemyHealthUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Action RPG Resources/System/countdownTimer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Action RPG Resources/System/first_countDown.tscn" type="PackedScene" id=6]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Score" parent="." instance=ExtResource( 1 )]
margin_top = 9.0
margin_bottom = 23.0

[node name="PlayerHealthUI" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 219.0
margin_top = 166.0
margin_right = 259.0
margin_bottom = 206.0

[node name="EnemyHealthUI" parent="." instance=ExtResource( 4 )]
visible = false

[node name="countdownTimer" parent="." instance=ExtResource( 5 )]
margin_left = 123.0
margin_top = 10.0
margin_right = 163.0
margin_bottom = 24.0

[node name="first_countDown" parent="." instance=ExtResource( 6 )]
margin_left = 107.0
margin_top = 8.0
margin_right = 147.0
margin_bottom = 22.0
